--- a/MarkdownEditor/style.css
+++ b/MarkdownEditor/style.css
@@ -1,4 +1,28 @@
 .editor {
-  width: 640px;
+  flex: 1;
+  border: 3px solid var(--color-border);
+  border-radius: 4px;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  padding: 40px 20px;
+  justify-content: center;
+  width: 50%;
+}
+
+.App {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.preview {
+  flex: 1;
+  width: 50%;
+  min-height: 100vh;
   background-color: var(--color-white);
+  box-shadow: 0 2px 16px hsla(0, 0%, 0%, 0.16);
+  border-radius: 4px;
+  border: 3px solid var(--color-border);
+  align-items: center;
+  padding: 40px 20px;
 }
