--- a/MarkdownEditor/style.css
+++ b/MarkdownEditor/style.css
@@ -1,28 +1,66 @@
-.editor {
-  flex: 1;
-  border: 3px solid var(--color-border);
-  border-radius: 4px;
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  padding: 40px 20px;
-  justify-content: center;
-  width: 50%;
+.outer{
+  height: 100%;
+  width: 100%;
+  /* : center; */
+}
+
+.filename {
+  text-align: center;
+  border: 3px solid green;
 }
 
 .App {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
+  height: 100%;
+}
+
+.editor {
+  flex: auto;
+  border: 3px solid var(--color-border);
+  background-color:  white;
+  /* border-radius: 4px; */
+  height: 100%;
+  align-items: center;
+  padding: 40px 20px;
+  justify-content: center;
+  width: 50%;
+  /* box-shadow: 0 2px 16px hsla(0, 0%, 0%, 0.16); */
 }
 
 .preview {
-  flex: 1;
+  flex: auto;
   width: 50%;
-  min-height: 100vh;
-  background-color: var(--color-white);
+  height: 100%;
+  /* background-color: var(--color-white); */
   box-shadow: 0 2px 16px hsla(0, 0%, 0%, 0.16);
-  border-radius: 4px;
-  border: 3px solid var(--color-border);
+  border-radius: 12px;
+  background-color:  hsla(0, 52%, 96%, 0.16);
+  border: 5px solid var(--color-border);
+  border-color: hsla(0, 2%, 20%, 0.16);;
   align-items: center;
   padding: 40px 20px;
 }
+
+/* .app {
+  width: 100%;
+  height: 100%;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.editor {
+  flex: auto;
+  border: 3px solid var(--color-border);
+  background-color:  hsla(0, 52%, 96%, 0.16);
+  border-radius: 4px;
+  height: 90%;
+  align-items: center;
+  padding: 4px 4px;
+  justify-content: center;
+  width: 100%;
+} */
